proj1/testing/error/badsetting2.inp
* B IX I II AAAA
HELLO World